--- a/templates/index.html
+++ b/templates/index.html
@@ -1,44 +1,5 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'base.html' %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>Fomulaire de Contact</title>
-  </head>
-  <body>
+{% block content %}
     <h1>Hello Mitnick!</h1>
-<!--    <form action="">-->
-<!--        <label>Prénom</label>-->
-<!--        <input required type="text" name="name" placeholder="Prénom">-->
-<!--        <label>Nom</label>-->
-<!--        <input required type="text" name="family_name" placeholder="Nom">-->
-<!--        <label>E-mail</label>-->
-<!--        <input required type="text" name="email" placeholder="E-mail">-->
-<!--        <label>Pays</label>-->
-<!--        <input required type="text" name="country" placeholder="Selectioner votre pays ...">-->
-<!--        <label>Genre (H/F/X)</label>-->
-<!--        <input required type="text" name="genre">-->
-<!--        &lt;!&ndash; Subject -> If there is none marked response, the default (autre) have to be marked &ndash;&gt;-->
-<!--        <label>Sujets</label>-->
-<!--        <input type="text" name="sujets">-->
-<!--        <label>Message</label>-->
-<!--        <input required type="text" name="message" placeholder="Votre message ici ...">-->
-<!--    </form>-->
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-  </body>
-</html>
+{% endblock %}
